--- a/index.html
+++ b/index.html
@@ -4,42 +4,40 @@
         <title>Russian-travel</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./vendor/normalize.css">
         <link rel="stylesheet" href="./fonts/fonts.css">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./pages/index.css">
     </head>
     <body class="page">
       <header class="header">
-       <img class="header__logo" a="Карта" src="./img/header-logo.svg">
-       <div class="header__links">
+        <img class="header__logo" a="Карта" src="./img/header-logo.svg">
+        <div class="header__links">
         <a class="header__lang-link header__lang-link_ru " href="#">Ru</a>
         <a class="header__lang-link header__lang-link_en" href="#">En</a>
-       </div>
+        </div>
       </header>
       <main class="content">
-       <section class="lead">
+        <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках
           новостей, а здесь.</p>
             <img class="lead__image" alt="Девушка в поезде" src="./img/polka1280.svg">
           <p class="lead__caption">ваша полка — верхняя</p>
-       </section>
-       <section class="intro">
+        </section>
+        <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
           но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу»
           и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-          <p class="intro__list">
-            Часовых поясов 11
-            <br>
-            Объектов природного наследия ЮНЕСКО 12
-            <br>
-            Объектов культурного наследия ЮНЕСКО 16
-            <br>
-            Природных заповедников 105
-            <br>
-            Аэропортов 241</p>
-       </section>
-       <section class="photo-grid">
+          <ul class="intro__lists">
+            <li class="intro__list">Часовых поясов 11</li>
+            <li class="intro__list">Объектов природного наследия ЮНЕСКО 12</li>
+            <li class="intro__list">Объектов культурного наследия ЮНЕСКО 16</li>
+            <li class="intro__list">Природных заповедников 105</li>
+            <li class="intro__list">Аэропортов 241</li>
+          </ul>
+        </section>
+        <section class="photo-grid">
         <img class="photo-grid__item" alt="фото" src="./img/photo-grid-train.jpg">
         <img class="photo-grid__item" alt="фото" src="./img/photo-grid-atharva-tulsi.jpg">
         <img class="photo-grid__item" alt="фото" src="./img/photo-grid-tuman.jpg">
@@ -52,10 +50,10 @@
         <img class="photo-grid__item" alt="фото" src="./img/photo-grid-kamchatka-2.jpg">
         <img class="photo-grid__item" alt="фото" src="./img/photo-grid-baikal-2.jpg">
         <img class="photo-grid__item" alt="фото" src="./img/photo-grid-ergaki.jpg">
-       </section>
-       <ul class="places">
+        </section>
+        <ul class="places">
         <li class="place">
-            <h2 class="place__title">Куршская<br> коса</h2>
+            <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
@@ -107,7 +105,7 @@
                   <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                     <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для 
                       соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя
-                      к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+                      к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду.&nbsp;В марте 2019 года на фестивале «Байкальская миля»был поставлен мировой рекорд — 197.011 км/ч.</p>
                     </div>
                       </li>
                       <li class="place">
@@ -120,16 +118,16 @@
                         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                             </li>
         </li>
-       </ul>
-       <section class="cover">
+        </ul>
+        <section class="cover">
         <a class="cover__link" href=" https://stampsy.com/na-elektrichkakh-do-baikala">
         <h2 class="cover__title">До Байкала <br>
           «на собаках»</h2>
-         <p class="cover__subtitle">По мотивам учебной темы
+          <p class="cover__subtitle">По мотивам учебной темы
             о Транссибе — путешествие
             от столицы до Байкала на электричках.</p>
           </a>
-       </section>
+        </section>
       </main>
       <footer class="footer">
         <div class="footer__links">
