--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </p>
                 <ul class="intro__lists">
                     <li class="intro__list"><span class="intro__list_span-accent">Часовых поясов</span> 11</li>
-                    <li class="intro_list"><span class="intro__list_span-accent">Объектов природного наследия ЮНЕСКО</span> 12</li>
+                    <li class="intro__list"><span class="intro__list_span-accent">Объектов природного наследия ЮНЕСКО</span> 12</li>
                     <li class="intro__list"><span class="intro__list_span-accent">Объектов культурного наследия ЮНЕСКО</span> 16</li>
                     <li class="intro__list"><span class="intro__list_span-accent">Природных заповедников</span> 105</li>
                     <li class="intro__list"><span class="intro__list_span-accent">Аэропортов</span> 241</li>
