--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header class="header">
             <img class="header__logo" alt="Карта" src="./images/header-logo.svg" />
             <div class="header__links">
-                <a class="header__lang-link" href="#">Ru</a>
+                <a class="header__lang-link header__lang-link_active " href="#">Ru</a>
                 <a class="header__lang-link" href="#">En</a>
             </div>
         </header>
@@ -18,7 +18,7 @@
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <img class="lead__image" alt="Девушка в поезде" src="./images/полка.png" />
+                <img class="lead__image" alt="Девушка в поезде" src="./images/polka.png" />
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
             <section class="intro">
